# facet

./: .envrc  .gitattributes  .gitignore  .lldb_jit_debug  .valgrind-suppressions.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOP.md  Dockerfile  ECOSYSTEM.md  GATE.md  HANDOFF-JIT-XML-BUG.md  HANDOFF.md  Justfile  METRICS.md  NEXT.md  NEXT_STEPS.md  PLAN.md  PROTO_ATTR_PORTING_PLAN.md  Package.swift  README.md  README.md.in  REPORT.md  callgrind.branch.out  callgrind.current.out  callgrind.main.out  check_sizes  ci.mjs  clippy.toml  codebook.toml  conductor.json  flake.nix  miri-env.sh  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  rust-toolchain.toml  (+7 more)
arborium-vix/: Cargo.toml  build.rs
arborium-vix/grammar/src/: grammar.json  node-types.json  parser.c
arborium-vix/queries/: highlights.scm
arborium-vix/src/: lib.rs
cinereus/: CHAWATHE_SEMANTICS.md  Cargo.toml  MATCHING_FIX_PLAN.md  README.md  README.md.in
cinereus/src/: chawathe.rs  lib.rs  matching.rs  simplify.rs  tracing_macros.rs  tree.rs
copypatch/: Cargo.toml  README.md
copypatch/src/: exec.rs  extract.rs  lib.rs  patch.rs
dibs/: CHANGELOG.md  Cargo.toml
dibs-cli/: CHANGELOG.md  Cargo.toml  README.md  README.md.in  build.rs
dibs-cli/src/: config.rs  lsp_extension.rs  main.rs  query_schema.rs  service.rs  tables.rs  tui.rs
dibs-cli/src/lints/: empty_select.rs  mod.rs  mutation_without_where.rs  pagination.rs  redundant_param.rs  relation.rs  soft_delete.rs  type_mismatch.rs  unknown_column.rs  unknown_table.rs  unused_param.rs
dibs-cli/tests/: lsp_extension.rs
dibs-cli/tests/lsp/: completions.styx
dibs-config/: CHANGELOG.md  Cargo.toml  README.md
dibs-config/src/: lib.rs
dibs-db-schema/: CHANGELOG.md  Cargo.toml  README.md
dibs-db-schema/src/: lib.rs  tests.rs
dibs-jsonb/: CHANGELOG.md  Cargo.toml  README.md
dibs-jsonb/src/: lib.rs
dibs-macros/: Cargo.toml  README.md
dibs-macros/src/: lib.rs
dibs-proto/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
dibs-proto/src/: lib.rs
dibs-qgen/: CHANGELOG.md  Cargo.toml  README.md.in
dibs-qgen/src/: error.rs  filter_spec.rs  lib.rs
dibs-qgen/src/fixtures/: queries.styx
dibs-qgen/src/parse/: mod.rs
dibs-qgen/src/planner/: mod.rs  (+1 more)
dibs-qgen/tests/: postgres_integration.rs
dibs-query-schema/: CHANGELOG.md  Cargo.toml
dibs-query-schema/src/: lib.rs  tests.rs
dibs-runtime/: CHANGELOG.md  Cargo.toml  README.md
dibs-runtime/src/: lib.rs
dibs-sql/: CHANGELOG.md  Cargo.toml  README.md
dibs-sql/src/: expr.rs  lib.rs  stmt.rs
dibs/proptest-regressions/: solver.txt
dibs/src/: backoffice.rs  diff.rs  error.rs  introspect.rs  jsonb.rs  lib.rs  meta.rs  migrate.rs  plugin.rs  pool.rs  schema.rs  service.rs  solver.rs  traced.rs
dibs/tests/: postgres_integration.rs  schema.rs
dodeca/: Cargo.toml  FONT_SUBSETTING_PLAN.md  HANDOFF.md  README.md  README.md.in  ROADMAP.md
dodeca/src/: cache_bust.rs  cas.rs  config.rs  db.rs  font_subsetter.rs  link_checker.rs  logging.rs  main.rs  og.rs  queries.rs  render.rs  search.rs  serve.rs  tui.rs  types.rs  url_rewrite.rs
exec-protocol/: Cargo.toml
exec-protocol/src/: lib.rs
fable/: CHANGELOG.md  Cargo.toml  README.md  build.rs  fable_ast.snark.js
fable/src/: ast.rs  lexer.rs  lib.rs  lowering.rs  parser.rs
fable/tests/: branch_step_limit_diagnosis.rs
facet-args/: CHANGELOG.md  Cargo.toml  DESIGN-layered-config.md  README.md  README.md.in
facet-args/examples/: args_showcase.rs  args_simple.rs  config.json  demo_deser_error.rs  demo_errors.rs  demo_missing_config.rs  global_args.rs  layered_config.rs
facet-args/src/: arg.rs  builder.rs  completions.rs  config_format.rs  config_value.rs  config_value_parser.rs  deserialize.rs  diagnostics.rs  driver.rs  dump.rs  env.rs  env2.rs  error.rs  fields.rs  format.rs  help.rs  lib.rs  merge.rs  parse.rs  parser.rs  parser2.rs  path.rs  provenance.rs  reflection.rs  results.rs  schema.rs  span.rs
facet-args/tests/: ariadne.rs  counted.rs  enums.rs  err.rs  help.rs  main.rs  sequence.rs  short_chaining.rs  simple.rs  subcommand.rs  subspans.rs
facet-asn1/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-asn1-legacy/: Cargo.toml  README.md
facet-asn1-legacy/src/: lib.rs
facet-asn1-legacy/tests/: mod.rs
facet-asn1/src/: error.rs  lib.rs  parser.rs  serializer.rs
facet-asn1/tests/: format_suite.rs  mod.rs
facet-assert/: Cargo.toml  README.md  README.md.in
facet-assert/examples/: assert_showcase.rs
facet-assert/src/: lib.rs  same.rs
facet-atom/: Cargo.toml  README.md  README.md.in
facet-atom/src/: lib.rs
facet-atom/tests/: all.rs
facet-axum/: Cargo.toml  README.md  README.md.in
facet-axum/src/: lib.rs
facet-bloatbench/: BENCHMARK_REPORT.md  Cargo.toml  README.md  README.md.in  measure.sh
facet-bloatbench/src/: generated.rs  lib.rs  main.rs
facet-cargo-toml/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  fuzz_registry.sh
facet-cargo-toml/examples/: parse_actual.rs  test_before_empty.rs  test_dotted_empty.rs  test_empty_table.rs  test_facet_dotted_array.rs  test_int_coercion.rs  test_parse.rs  test_profiles.rs  test_workspace.rs
facet-cargo-toml/src/: full.rs  lib.rs  lockfile.rs  manifest.rs
facet-cargo-toml/tests/: bearcove_lockfiles.rs  bearcove_manifests.rs
facet-codegen/: Cargo.toml
facet-codegen/src/: fmt_staged.rs  gen_tuple_impl.rs  gen_tuples_impls.rs  main.rs  readme.rs  sample.rs
facet-core/: CHANGELOG.md  Cargo.toml  README.md  README.md.in  arborium-header.html  build.rs
facet-core-proc-macros/: Cargo.toml
facet-core-proc-macros/src/: lib.rs
facet-core/src/: impls_bytes.rs  impls_camino.rs  impls_chrono.rs  impls_const_oid.rs  impls_indexmap.rs  impls_jiff.rs  impls_num_complex.rs  impls_ordered_float.rs  impls_ruint.rs  impls_time.rs  impls_ulid.rs  impls_url.rs  impls_uuid.rs  lib.rs  macros.rs  opaque.rs  ptr.rs  scalar.rs  taxon_bridge.rs  typeid.rs  write.rs
facet-core/tests/: main.rs  pointer.rs  simd.rs  taxon_bridge.rs  vtable.rs
facet-csv-legacy/: Cargo.toml  README.md
facet-csv-legacy/tests/: structs.rs
(+7370 files in other folders)
