[workspace]
members = [
  # core
  "facet-core",
  "facet",

  # derive macro
  "facet-macros-impl",
  "facet-macros",

  # macro ecosystem (plugin support)
  "facet-macro-types",
  "facet-macro-parse",
  # "facet-macro-template",  # TODO: re-enable when plugin system is ready

  # error derive plugin
  "facet-error",

  # default derive plugin
  "facet-default",

  # reflection
  "facet-reflect",

  # constraint solver
  "facet-solver",

  # test helpers
  "facet-testhelpers",
  "facet-testhelpers-macros",
  "facet-testattrs",

  # pretty printing
  "facet-pretty",

  # misc.
  "facet-urlencoded",
  "facet-axum",

  # formats, dynamic values, and schema/codegen
  "facet-dessert",
  "facet-format",
  "facet-json",
  "facet-json-classics",
  "facet-postcard",
  "facet-msgpack",
  "facet-toml",
  "facet-yaml",
  "facet-format-suite",
  "facet-asn1",
  "facet-csv",
  "facet-xdr",
  "facet-json-schema",
  "facet-typescript",
  "facet-python",
  "facet-lua",
  "facet-value",
  "facet-zod",

  # XML, DOM, and SVG
  "facet-singularize",
  "facet-dom",
  "facet-xml",
  "facet-xml-node",
  "facet-atom",
  "facet-svg",

  # utilities
  "facet-path",
  "facet-validate",
  "facet-cargo-toml",
  "rusqlite-facet",
  "rediff",
  "figue",
  "figue-attrs",

  # Styx configuration language
  "facet-styx",
  "serde_styx",
  "styx-cli",
  "styx-compat-tests",
  "styx-cst",
  "styx-embed",
  "styx-embed-macros",
  "styx-ffi",
  "styx-format",
  "styx-gen-go",
  "styx-lsp",
  "styx-lsp-ext",
  "styx-lsp-test-schema",
  "styx-parse",
  "styx-testhelpers",
  "styx-tokenizer",
  "styx-tree",
  "styx-wasm",
  "styx-xtask",
  "tree-sitter-styx",

  # async incremental query runtime
  "picante",
  "picante-macros",

  # strongly-typed string IDs
  "strid",
  "strid-macros",
  "strid-examples",

  # showcase infrastructure
  "facet-showcase",

]
exclude = [
  # tools/ has its own workspace
  "tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"

[workspace.dependencies]
facet = { path = "facet", version = "0.50.0-rc.0" }
facet-core = { path = "facet-core" }
facet-default = { path = "facet-default", version = "0.50.0-rc.0" }
facet-dessert = { path = "facet-dessert", version = "0.50.0-rc.0" }
facet-dom = { path = "facet-dom", version = "0.50.0-rc.0" }
facet-error = { path = "facet-error", version = "0.50.0-rc.0" }
facet-format = { path = "facet-format", version = "0.50.0-rc.0" }
facet-format-suite = { path = "facet-format-suite", version = "0.50.0-rc.0" }
facet-json = { path = "facet-json", version = "0.50.0-rc.0" }
facet-json-classics = { path = "facet-json-classics", version = "0.50.0-rc.0" }
facet-msgpack = { path = "facet-msgpack", version = "0.50.0-rc.0" }
facet-path = { path = "facet-path", version = "0.50.0-rc.0" }
facet-postcard = { path = "facet-postcard", version = "0.50.0-rc.0" }
facet-pretty = { path = "facet-pretty" }
facet-reflect = { path = "facet-reflect", version = "0.50.0-rc.0" }
facet-singularize = { path = "facet-singularize", version = "0.50.0-rc.0" }
facet-solver = { path = "facet-solver", version = "0.50.0-rc.0" }
facet-testhelpers = { path = "facet-testhelpers", version = "0.50.0-rc.0" }
facet-toml = { path = "facet-toml", version = "0.50.0-rc.0" }
facet-xml = { path = "facet-xml", version = "0.50.0-rc.0" }
facet-urlencoded = { path = "facet-urlencoded", version = "0.50.0-rc.0" }
facet-value = { path = "facet-value", version = "0.50.0-rc.0" }
facet-yaml = { path = "facet-yaml", version = "0.50.0-rc.0" }
figue = { path = "figue", version = "5.0.0-rc.0" }
figue-attrs = { path = "figue-attrs", version = "5.0.0-rc.0" }
facet-styx = { path = "facet-styx", version = "5.0.0-rc.0" }
picante-macros = { path = "picante-macros", version = "3.0.0-rc.0" }
serde_styx = { path = "serde_styx", version = "5.0.0-rc.0" }
strid = { path = "strid", version = "11.0.0-rc.0" }
strid-macros = { path = "strid-macros", version = "11.0.0-rc.0" }
styx-cst = { path = "styx-cst", version = "5.0.0-rc.0" }
styx-embed = { path = "styx-embed", version = "5.0.0-rc.0" }
styx-embed-macros = { path = "styx-embed-macros", version = "5.0.0-rc.0" }
styx-format = { path = "styx-format", version = "5.0.0-rc.0" }
styx-gen-go = { path = "styx-gen-go", version = "5.0.0-rc.0" }
styx-lsp = { path = "styx-lsp", version = "5.0.0-rc.0" }
styx-lsp-ext = { path = "styx-lsp-ext", version = "5.0.0-rc.0" }
styx-lsp-test-schema = { path = "styx-lsp-test-schema", version = "5.0.0-rc.0" }
styx-parse = { path = "styx-parse", version = "5.0.0-rc.0" }
styx-testhelpers = { path = "styx-testhelpers", version = "5.0.0-rc.0" }
styx-tokenizer = { path = "styx-tokenizer", version = "5.0.0-rc.0" }
styx-tree = { path = "styx-tree", version = "5.0.0-rc.0" }
arborium = { version = "^2.4.5", default-features = false, features = ["lang-json"] }
autocfg = "^1.5.0"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio", "json"] }
ariadne = "^0.6"
blake3 = "^1"
bolero = "^0.13.4"
brotli = "8"
bytes = { version = "^1.11.0", default-features = false }
bytestring = { version = "^1.4.0", default-features = false }
cbindgen = "^0.28"
cc = "^1.0.87"
camino = "^1.2.1"
compact_str = { version = "^0.9.0", default-features = false }
chrono = { version = "^0.4.42", default-features = false, features = ["alloc"] }
datatest-stable = "0.3"
dashmap = "^6"
dirs = "^6"
divan = "^0.1.21"
eyre = "^0.6.12"
futures = "^0.3"
futures-util = { version = "^0.3.31", default-features = false, features = ["std", "async-await"] }
glob = "^0.3"
goblin = "^0.9"
heck = "^0.5.0"
hex = "^0.4"
http = "^1.4.0"
im = "^15.1.0"
indexmap = { version = "^2.12.1", default-features = false }
insta = "^1.44.3"
jiff = "^0.2.16"
log = { version = "^0.4.29", features = ["std"] }
lz4_flex = "^0.11"
memmap2 = "^0.9"
owo-colors = "^4.2.3"
parking_lot = "^0.12.4"
proc-macro2 = "1"
proptest = "^1"
quote = "1"
rowan = "^0.16"
smartstring = { version = "^1.0.1", default-features = false }
smol_str = { version = "^0.3.4", default-features = false }
static_assertions = "^1.1.0"
strsim = "0.11"
strip-ansi-escapes = "^0.2.1"
supports-color = "^3"
tempfile = "^3.23.0"
time = { version = "^0.3.44", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["io-util", "rt", "rt-multi-thread"] }
tokio-test-lite = "^0.2"
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-lsp = "^0.20"
tracing = { version = "^0.1.43", default-features = false, features = ["std"] }
tracing-subscriber = { version = "^0.3.22", default-features = false, features = ["fmt", "std"] }
tree-sitter = { package = "arborium-tree-sitter", version = "2.18.0" }
unicode-width = "^0.2.2"
trybuild = "^1.0"
ulid = "^1.2.1"
unsynn = "^0.3.0"
uuid = "^1.19.0"
rust_decimal = { version = "^1.38.0", default-features = false, features = ["std"] }
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
smallvec = { version = "^1.15", default-features = false }
iddqd = { version = "^0.4.0", default-features = false }
confusables = "^0.1"
indoc = "^2.0.7"
indextree = "^4"
libtest-mimic = "^0.8.1"
palette = { version = "^0.7", default-features = false, features = ["std"] }
serde = { version = "^1.0.228", default-features = false, features = ["alloc", "derive"] }
serde-wasm-bindgen = "^0.6"
serde_json = { version = "^1.0.145", features = ["alloc"] }
sha2 = "^0.10"
similar = "^2"
terminal-colorsaurus = "^1"
wasm-bindgen = "^0.2"
which = "^7"
vox = "^0.9.0-rc.0"
vox-stream = "^0.9.0-rc.0"

# Allow the facet_no_doc cfg in generated code
# See: https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(facet_no_doc)", "cfg(kani)"] }

[workspace.lints.clippy]
# Box::leak is always a bug in this codebase - it hides lifetime problems instead of solving them
disallowed_methods = "deny"

# Profiling profile - release optimizations with line tables for callgrind/perf
[profile.profiling]
inherits = "release"
debug = "line-tables-only"

# Fuzzing profile for cargo-bolero
[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev.package.backtrace]
opt-level = 3

[patch.crates-io]
facet = { path = "facet" }
facet-core = { path = "facet-core" }
facet-default = { path = "facet-default" }
facet-path = { path = "facet-path" }
facet-pretty = { path = "facet-pretty" }
facet-reflect = { path = "facet-reflect" }
facet-solver = { path = "facet-solver" }
facet-testhelpers = { path = "facet-testhelpers" }
facet-axum = { path = "facet-axum" }
facet-cargo-toml = { path = "facet-cargo-toml" }
facet-urlencoded = { path = "facet-urlencoded" }
facet-asn1 = { path = "facet-asn1" }
facet-csv = { path = "facet-csv" }
facet-dessert = { path = "facet-dessert" }
facet-dom = { path = "facet-dom" }
facet-format = { path = "facet-format" }
facet-format-suite = { path = "facet-format-suite" }
facet-json = { path = "facet-json" }
facet-json-classics = { path = "facet-json-classics" }
facet-json-schema = { path = "facet-json-schema" }
facet-lua = { path = "facet-lua" }
facet-msgpack = { path = "facet-msgpack" }
facet-postcard = { path = "facet-postcard" }
facet-python = { path = "facet-python" }
facet-singularize = { path = "facet-singularize" }
facet-atom = { path = "facet-atom" }
facet-svg = { path = "facet-svg" }
facet-toml = { path = "facet-toml" }
facet-typescript = { path = "facet-typescript" }
facet-value = { path = "facet-value" }
facet-xml = { path = "facet-xml" }
facet-xml-node = { path = "facet-xml-node" }
facet-xdr = { path = "facet-xdr" }
facet-yaml = { path = "facet-yaml" }
facet-zod = { path = "facet-zod" }
figue = { path = "figue" }
figue-attrs = { path = "figue-attrs" }
facet-styx = { path = "facet-styx" }
rusqlite-facet = { path = "rusqlite-facet" }
rediff = { path = "rediff" }
picante = { path = "picante" }
picante-macros = { path = "picante-macros" }
serde_styx = { path = "serde_styx" }
strid = { path = "strid" }
strid-macros = { path = "strid-macros" }
styx-cli = { path = "styx-cli" }
styx-cst = { path = "styx-cst" }
styx-embed = { path = "styx-embed" }
styx-embed-macros = { path = "styx-embed-macros" }
styx-ffi = { path = "styx-ffi" }
styx-format = { path = "styx-format" }
styx-gen-go = { path = "styx-gen-go" }
styx-lsp = { path = "styx-lsp" }
styx-lsp-ext = { path = "styx-lsp-ext" }
styx-lsp-test-schema = { path = "styx-lsp-test-schema" }
styx-parse = { path = "styx-parse" }
styx-testhelpers = { path = "styx-testhelpers" }
styx-tokenizer = { path = "styx-tokenizer" }
styx-tree = { path = "styx-tree" }
styx-wasm = { path = "styx-wasm" }
tree-sitter-styx = { path = "tree-sitter-styx" }
strid-examples = { path = "strid-examples" }
