[workspace]
members = [
  # core
  "facet-core",
  "facet",

  # derive macro
  "facet-macros-impl",
  "facet-macros",

  # macro ecosystem (plugin support)
  "facet-macro-types",
  "facet-macro-parse",
  # "facet-macro-template",  # TODO: re-enable when plugin system is ready

  # error derive plugin
  "facet-error",

  # default derive plugin
  "facet-default",

  # reflection
  "facet-reflect",

  # constraint solver
  "facet-solver",

  # test helpers
  "facet-testhelpers",
  "facet-testhelpers-macros",
  "facet-testattrs",

  # pretty printing
  "facet-pretty",

  # misc.
  "facet-urlencoded",
  "facet-axum",

  # formats, dynamic values, and schema/codegen
  "facet-dessert",
  "facet-format",
  "facet-json",
  "facet-json-classics",
  "facet-postcard",
  "facet-msgpack",
  "facet-toml",
  "facet-yaml",
  "facet-format-suite",
  "facet-asn1",
  "facet-csv",
  "facet-xdr",
  "facet-json-schema",
  "facet-typescript",
  "facet-python",
  "facet-lua",
  "facet-value",
  "facet-zod",

  # XML, DOM, and SVG
  "facet-singularize",
  "facet-dom",
  "facet-xml",
  "facet-xml-node",
  "facet-atom",
  "facet-svg",

  # utilities
  "facet-path",
  "facet-validate",
  "facet-hash",
  "fable",
  "facet-cargo-toml",
  "rusqlite-facet",
  "rediff",
  "figue",
  "figue-attrs",

  # Styx configuration language
  "facet-styx",
  "serde_styx",
  "styx-cli",
  "styx-compat-tests",
  "styx-cst",
  "styx-embed",
  "styx-embed-macros",
  "styx-ffi",
  "styx-format",
  "styx-gen-go",
  "styx-lsp",
  "styx-lsp-ext",
  "styx-lsp-test-schema",
  "styx-parse",
  "styx-testhelpers",
  "styx-tokenizer",
  "styx-tree",
  "styx-wasm",
  "styx-xtask",
  "tree-sitter-styx",

  # async incremental query runtime
  "picante",
  "picante-macros",

  # Dibs Postgres toolkit
  "facet-tokio-postgres",
  "dibs",
  "dibs-cli",
  "dibs-codegen",
  "dibs-config",
  "dibs-db-schema",
  "dibs-jsonb",
  "dibs-macros",
  "dibs-proto",
  "dibs-qgen",
  "dibs-query-schema",
  "dibs-runtime",
  "dibs-sql",
  "dockside",
  "examples/dibs-my-app-workspace/my-app",
  "examples/dibs-my-app-workspace/my-app-db",
  "examples/dibs-my-app-workspace/my-app-queries",

  # Phon schema and typed codec
  "weavy",
  "copypatch",
  "phon/rust/phon-schema",
  "phon/rust/phon-ir",
  "phon/rust/phon-engine",
  "phon/rust/phon-jit",
  "phon/rust/phon",
  "phon/rust/phon-codegen",
  "phon/rust/phon-conformance",

  # Vox RPC framework
  "vox/rust-examples",
  "vox/xtask",
  "vox/spec/spec-proto",
  "vox/spec/spec-tests",
  "vox/rust/vox-types",
  "vox/rust/vox-rt",
  "vox/rust/vox-rt-macros",
  "vox/rust/vox-schema",
  "vox/rust/vox-core",
  "vox/rust/vox-stream",
  "vox/rust/vox-websocket",
  "vox/rust/vox-inprocess",
  "vox/rust/vox-local",
  "vox/rust/vox-fdpass",
  "vox/rust/vox-ffi",
  "vox/rust/ur-taking-me-with-you",
  "vox/rust/vox-macros-parse",
  "vox/rust/vox-macros-core",
  "vox/rust/vox-macros",
  "vox/rust/vox",
  "vox/rust/subject-rust",
  "vox/rust/vox-codegen",
  "vox/rust/vox-phon",
  "vox/rust/wasm-browser-tests",
  "vox/rust/wasm-inprocess-tests",
  "vox/typescript/peer-server",

  # strongly-typed string IDs
  "strid",
  "strid-macros",
  "strid-examples",

  # showcase infrastructure
  "facet-showcase",

]

# Keep root-level cargo commands focused on the Facet surface and the active
# Weavy/Phon extraction work. Use `--workspace` for full monorepo checks.
default-members = [
  # core
  "facet-core",
  "facet",

  # derive macro
  "facet-macros-impl",
  "facet-macros",

  # macro ecosystem (plugin support)
  "facet-macro-types",
  "facet-macro-parse",

  # derive plugins
  "facet-error",
  "facet-default",

  # reflection and solver
  "facet-reflect",
  "facet-solver",

  # test helpers
  "facet-testhelpers",
  "facet-testhelpers-macros",
  "facet-testattrs",

  # pretty printing
  "facet-pretty",

  # misc.
  "facet-urlencoded",
  "facet-axum",

  # formats, dynamic values, and schema/codegen
  "facet-dessert",
  "facet-format",
  "facet-json",
  "facet-json-classics",
  "facet-postcard",
  "facet-msgpack",
  "facet-toml",
  "facet-yaml",
  "facet-format-suite",
  "facet-asn1",
  "facet-csv",
  "facet-xdr",
  "facet-json-schema",
  "facet-typescript",
  "facet-python",
  "facet-lua",
  "facet-value",
  "facet-zod",

  # XML, DOM, and SVG
  "facet-singularize",
  "facet-dom",
  "facet-xml",
  "facet-xml-node",
  "facet-atom",
  "facet-svg",

  # utilities
  "facet-path",
  "facet-validate",
  "facet-hash",
  "fable",
  "facet-cargo-toml",
  "rusqlite-facet",
  "rediff",
  "figue",
  "figue-attrs",

  # Phon schema and typed codec
  "weavy",
  "copypatch",
  "phon/rust/phon-schema",
  "phon/rust/phon-ir",
  "phon/rust/phon-engine",
  "phon/rust/phon-jit",
  "phon/rust/phon",
  "phon/rust/phon-codegen",
  "phon/rust/phon-conformance",
]
exclude = [
  # tools/ has its own workspace
  "tools",
  # imported Vox directories that were not members of the original Vox workspace
  "vox/fuzz",
]
resolver = "3"

[workspace.package]
version = "0.10.0-rc.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
homepage = "https://facet.rs"
documentation = "https://docs.rs/vox"
keywords = ["rpc", "ipc", "networking", "facet"]
categories = ["network-programming", "asynchronous"]

[workspace.dependencies]
facet = { path = "facet", version = "0.50.0-rc.1" }
facet-core = { path = "facet-core", version = "0.50.0-rc.1" }
facet-default = { path = "facet-default", version = "0.50.0-rc.1" }
facet-dessert = { path = "facet-dessert", version = "0.50.0-rc.1" }
facet-dom = { path = "facet-dom", version = "0.50.0-rc.1" }
facet-error = { path = "facet-error", version = "0.50.0-rc.1" }
facet-format = { path = "facet-format", version = "0.50.0-rc.1" }
facet-format-suite = { path = "facet-format-suite", version = "0.50.0-rc.0" }
facet-json = { path = "facet-json", version = "0.50.0-rc.1" }
facet-json-classics = { path = "facet-json-classics", version = "0.50.0-rc.0" }
facet-msgpack = { path = "facet-msgpack", version = "0.50.0-rc.1" }
facet-path = { path = "facet-path", version = "0.50.0-rc.1" }
facet-postcard = { path = "facet-postcard", version = "0.50.0-rc.1" }
facet-pretty = { path = "facet-pretty", version = "0.50.0-rc.1" }
facet-reflect = { path = "facet-reflect", version = "0.50.0-rc.1" }
facet-singularize = { path = "facet-singularize", version = "0.50.0-rc.1" }
facet-solver = { path = "facet-solver", version = "0.50.0-rc.1" }
facet-testhelpers = { path = "facet-testhelpers", version = "0.50.0-rc.1" }
facet-tokio-postgres = { path = "facet-tokio-postgres", version = "0.50.0-rc.1" }
facet-toml = { path = "facet-toml", version = "0.50.0-rc.1" }
facet-xml = { path = "facet-xml", version = "0.50.0-rc.1" }
facet-urlencoded = { path = "facet-urlencoded", version = "0.50.0-rc.1" }
facet-value = { path = "facet-value", version = "0.50.0-rc.1" }
facet-yaml = { path = "facet-yaml", version = "0.50.0-rc.1" }
figue = { path = "figue", version = "5.0.0-rc.1" }
figue-attrs = { path = "figue-attrs", version = "5.0.0-rc.1" }
facet-styx = { path = "facet-styx", version = "5.0.0-rc.1" }
picante-macros = { path = "picante-macros", version = "3.0.0-rc.1" }
dibs = { path = "dibs", version = "0.2.0-rc.1" }
dibs-config = { path = "dibs-config", version = "0.2.0-rc.1" }
dibs-db-schema = { path = "dibs-db-schema", version = "0.2.0-rc.1" }
dibs-jsonb = { path = "dibs-jsonb", version = "0.2.0-rc.1" }
dibs-macros = { path = "dibs-macros", version = "0.2.0-rc.1" }
dibs-proto = { path = "dibs-proto", version = "0.2.0-rc.1" }
dibs-qgen = { path = "dibs-qgen", version = "0.2.0-rc.1" }
dibs-query-schema = { path = "dibs-query-schema", version = "0.2.0-rc.1" }
dibs-sql = { path = "dibs-sql", version = "0.2.0-rc.1" }
dockside = { path = "dockside" }
copypatch = { path = "copypatch", version = "0.2.0-rc.1" }
cstree = { version = "0.14.0", features = ["derive"] }
weavy = { path = "weavy", version = "0.1.0" }
phon = { path = "phon/rust/phon", version = "0.2.0-rc.1" }
phon-engine = { path = "phon/rust/phon-engine", version = "0.2.0-rc.1" }
phon-ir = { path = "phon/rust/phon-ir", version = "0.2.0-rc.1" }
phon-jit = { path = "phon/rust/phon-jit", version = "0.2.0-rc.1" }
phon-schema = { path = "phon/rust/phon-schema", version = "0.2.0-rc.1" }
phon-codegen = { path = "phon/rust/phon-codegen", version = "0.2.0-rc.1" }
spec-proto = { path = "vox/spec/spec-proto", version = "0.2.2" }
subject-rust = { path = "vox/rust/subject-rust", version = "0.2.2" }
vox = { path = "vox/rust/vox", version = "0.10.0-rc.1" }
vox-codegen = { path = "vox/rust/vox-codegen", version = "0.10.0-rc.2" }
vox-core = { path = "vox/rust/vox-core", version = "0.10.0-rc.1" }
vox-fdpass = { path = "vox/rust/vox-fdpass", version = "0.10.0-rc.1" }
vox-ffi = { path = "vox/rust/vox-ffi", version = "0.10.0-rc.1" }
vox-inprocess = { path = "vox/rust/vox-inprocess", version = "0.10.0-rc.1" }
vox-macros-core = { path = "vox/rust/vox-macros-core", version = "0.10.0-rc.1" }
vox-macros-parse = { path = "vox/rust/vox-macros-parse", version = "0.10.0-rc.1" }
vox-phon = { path = "vox/rust/vox-phon", version = "0.10.0-rc.1" }
vox-rt = { path = "vox/rust/vox-rt", version = "0.10.0-rc.1" }
vox-rt-macros = { path = "vox/rust/vox-rt-macros", version = "0.10.0-rc.1" }
vox-schema = { path = "vox/rust/vox-schema", version = "0.10.0-rc.1" }
vox-service-macros = { path = "vox/rust/vox-macros", version = "0.10.0-rc.1" }
vox-stream = { path = "vox/rust/vox-stream", version = "0.10.0-rc.1" }
vox-types = { path = "vox/rust/vox-types", version = "0.10.0-rc.1" }
vox-websocket = { path = "vox/rust/vox-websocket", version = "0.10.0-rc.1" }
serde_styx = { path = "serde_styx", version = "5.0.0-rc.1" }
strid = { path = "strid", version = "11.0.0-rc.1" }
strid-macros = { path = "strid-macros", version = "11.0.0-rc.1" }
styx-cst = { path = "styx-cst", version = "5.0.0-rc.1" }
styx-embed = { path = "styx-embed", version = "5.0.0-rc.1" }
styx-embed-macros = { path = "styx-embed-macros", version = "5.0.0-rc.1" }
styx-format = { path = "styx-format", version = "5.0.0-rc.1" }
styx-gen-go = { path = "styx-gen-go", version = "5.0.0-rc.1" }
styx-lsp = { path = "styx-lsp", version = "5.0.0-rc.1" }
styx-lsp-ext = { path = "styx-lsp-ext", version = "5.0.0-rc.1" }
styx-lsp-test-schema = { path = "styx-lsp-test-schema", version = "5.0.0-rc.1" }
styx-parse = { path = "styx-parse", version = "5.0.0-rc.1" }
styx-testhelpers = { path = "styx-testhelpers", version = "5.0.0-rc.1" }
styx-tokenizer = { path = "styx-tokenizer", version = "5.0.0-rc.1" }
styx-tree = { path = "styx-tree", version = "5.0.0-rc.1" }
arborium = { version = "^2.4.5", default-features = false, features = ["lang-json", "lang-rust"] }
arborium-highlight = "^2.4.5"
arborium-theme = "^2.4.5"
autocfg = "^1.5.0"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio", "json"] }
ariadne = "^0.6"
blake3 = "^1"
bolero = "^0.13.4"
brotli = "8"
bytes = { version = "^1.11.0", default-features = false }
bytestring = { version = "^1.4.0", default-features = false }
cbindgen = "^0.28"
cc = "^1.0.87"
camino = "^1.2.1"
compact_str = { version = "^0.9.0", default-features = false }
chrono = { version = "^0.4.42", default-features = false, features = ["alloc"] }
codegen = "^0.3"
crossterm = "^0.29"
datatest-stable = "0.3"
dashmap = "^6"
deadpool-postgres = "^0.14"
dirs = "^6"
divan = { package = "codspeed-divan-compat", version = "4.7.0" }
dotenvy = "^0.15"
eyre = "^0.6.12"
futures = "^0.3"
futures-channel = "0.3"
futures-util = { version = "^0.3.31", default-features = false, features = ["std", "async-await", "async-await-macro"] }
glob = "^0.3"
goblin = "^0.9"
heck = "^0.5.0"
hex = "^0.4"
http = "^1.4.0"
im = "^15.1.0"
indexmap = { version = "^2.12.1", default-features = false }
insta = "^1.44.3"
inventory = "^0.3"
jiff = "^0.2.16"
js-sys = "0.3"
libc = "0.2.180"
log = { version = "^0.4.29", features = ["std"] }
lz4_flex = "^0.11"
memmap2 = "^0.9"
owo-colors = "^4.2.3"
object = "^0.39"
parking_lot = "^0.12.4"
passfd = "0.1"
postgres-types = "^0.2"
prettyplease = "0.2"
proc-macro2 = "1"
proptest = "^1"
quote = "1"
ratatui = "^0.30"
rowan = "^0.16"
smartstring = { version = "^1.0.1", default-features = false }
smol_str = { version = "^0.3.4", default-features = false }
static_assertions = "^1.1.0"
strsim = "0.11"
strip-ansi-escapes = "^0.2.1"
supports-color = "^3"
tempfile = "^3.23.0"
testcontainers = "^0.27"
testcontainers-modules = { version = "^0.15", features = ["postgres"] }
thiserror = "^2"
time = { version = "^0.3.44", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["io-util", "rt", "rt-multi-thread"] }
tokio-postgres = "^0.7"
tokio-rustls = "0.26"
tokio-test-lite = "^0.2"
tokio-tungstenite = "^0.29"
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-lsp = "^0.20"
tracing = { version = "^0.1.43", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "^0.3.22", default-features = false, features = ["fmt", "std", "env-filter"] }
tree-sitter = { package = "arborium-tree-sitter", version = "2.18.0" }
unicode-width = "^0.2.2"
trybuild = "^1.0"
ulid = "^1.2.1"
unsynn = "^0.3.0"
uuid = "^1.19.0"
rust_decimal = { version = "^1.38.0", default-features = false, features = ["std"] }
rustls = "0.23"
rustls-pemfile = "2"
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
smallvec = { version = "^1.15", default-features = false }
structstruck = "0.5.1"
syn = { version = "2", features = ["full"] }
iddqd = { version = "^0.4.0", default-features = false }
confusables = "^0.1"
indoc = "^2.0.7"
indextree = "^4"
libtest-mimic = "^0.8.1"
palette = { version = "^0.7", default-features = false, features = ["std"] }
serde = { version = "^1.0.228", default-features = false, features = ["alloc", "derive"] }
serde-wasm-bindgen = "^0.6"
serde_json = { version = "^1.0.145", features = ["alloc"] }
sha2 = "^0.10"
similar = "^2"
terminal-colorsaurus = "^1"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "0.4"
wasmtimer = { version = "0.4", default-features = false }
web-sys = "0.3"
which = "^7"
windows-sys = "0.61"
xshell = "0.2"
zerocopy = { version = "0.8", features = ["derive"] }

# Allow the facet_no_doc cfg in generated code
# See: https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(facet_no_doc)", "cfg(kani)"] }

[workspace.lints.clippy]
# Box::leak is always a bug in this codebase - it hides lifetime problems instead of solving them
disallowed_methods = "deny"

# Profiling profile - release optimizations with line tables for callgrind/perf
[profile.profiling]
inherits = "release"
debug = "line-tables-only"

# Fuzzing profile for cargo-bolero
[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev.package.backtrace]
opt-level = 3

[patch.crates-io]
facet = { path = "facet" }
facet-core = { path = "facet-core" }
facet-default = { path = "facet-default" }
facet-path = { path = "facet-path" }
facet-pretty = { path = "facet-pretty" }
facet-reflect = { path = "facet-reflect" }
facet-solver = { path = "facet-solver" }
facet-testhelpers = { path = "facet-testhelpers" }
facet-axum = { path = "facet-axum" }
facet-cargo-toml = { path = "facet-cargo-toml" }
facet-tokio-postgres = { path = "facet-tokio-postgres" }
facet-urlencoded = { path = "facet-urlencoded" }
facet-asn1 = { path = "facet-asn1" }
facet-csv = { path = "facet-csv" }
facet-dessert = { path = "facet-dessert" }
facet-dom = { path = "facet-dom" }
facet-format = { path = "facet-format" }
facet-format-suite = { path = "facet-format-suite" }
facet-hash = { path = "facet-hash" }
fable = { path = "fable" }
facet-json = { path = "facet-json" }
facet-json-classics = { path = "facet-json-classics" }
facet-json-schema = { path = "facet-json-schema" }
facet-lua = { path = "facet-lua" }
facet-msgpack = { path = "facet-msgpack" }
facet-postcard = { path = "facet-postcard" }
facet-python = { path = "facet-python" }
facet-singularize = { path = "facet-singularize" }
facet-atom = { path = "facet-atom" }
facet-svg = { path = "facet-svg" }
facet-toml = { path = "facet-toml" }
facet-typescript = { path = "facet-typescript" }
facet-value = { path = "facet-value" }
facet-xml = { path = "facet-xml" }
facet-xml-node = { path = "facet-xml-node" }
facet-xdr = { path = "facet-xdr" }
facet-yaml = { path = "facet-yaml" }
facet-zod = { path = "facet-zod" }
figue = { path = "figue" }
figue-attrs = { path = "figue-attrs" }
facet-styx = { path = "facet-styx" }
dibs = { path = "dibs" }
dibs-cli = { path = "dibs-cli" }
dibs-config = { path = "dibs-config" }
dibs-db-schema = { path = "dibs-db-schema" }
dibs-jsonb = { path = "dibs-jsonb" }
dibs-macros = { path = "dibs-macros" }
dibs-proto = { path = "dibs-proto" }
dibs-qgen = { path = "dibs-qgen" }
dibs-query-schema = { path = "dibs-query-schema" }
dibs-runtime = { path = "dibs-runtime" }
dibs-sql = { path = "dibs-sql" }
copypatch = { path = "copypatch" }
weavy = { path = "weavy" }
phon = { path = "phon/rust/phon" }
phon-codegen = { path = "phon/rust/phon-codegen" }
phon-conformance = { path = "phon/rust/phon-conformance" }
phon-engine = { path = "phon/rust/phon-engine" }
phon-ir = { path = "phon/rust/phon-ir" }
phon-jit = { path = "phon/rust/phon-jit" }
phon-schema = { path = "phon/rust/phon-schema" }
rusqlite-facet = { path = "rusqlite-facet" }
rediff = { path = "rediff" }
picante = { path = "picante" }
picante-macros = { path = "picante-macros" }
serde_styx = { path = "serde_styx" }
strid = { path = "strid" }
strid-macros = { path = "strid-macros" }
styx-cli = { path = "styx-cli" }
styx-cst = { path = "styx-cst" }
styx-embed = { path = "styx-embed" }
styx-embed-macros = { path = "styx-embed-macros" }
styx-ffi = { path = "styx-ffi" }
styx-format = { path = "styx-format" }
styx-gen-go = { path = "styx-gen-go" }
styx-lsp = { path = "styx-lsp" }
styx-lsp-ext = { path = "styx-lsp-ext" }
styx-lsp-test-schema = { path = "styx-lsp-test-schema" }
styx-parse = { path = "styx-parse" }
styx-testhelpers = { path = "styx-testhelpers" }
styx-tokenizer = { path = "styx-tokenizer" }
styx-tree = { path = "styx-tree" }
styx-wasm = { path = "styx-wasm" }
tree-sitter-styx = { path = "tree-sitter-styx" }
strid-examples = { path = "strid-examples" }
