[package]
name = "cinereus"
version = "0.42.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
description = "GumTree-style tree diffing with Chawathe edit script generation"
repository = "https://github.com/facet-rs/facet"
keywords = ["tree", "diff", "gumtree", "chawathe", "edit-script"]
categories = ["algorithms", "data-structures"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
matching-stats = []
tracing = ["dep:tracing"]

[dependencies]
indextree = { workspace = true }
rapidhash = "1"
rayon = "1"
tracing = { version = "0.1", optional = true }
facet-core = { workspace = true }
facet-pretty.workspace = true
facet = { path = "../facet" }

[dev-dependencies]
tracing = { workspace = true }
facet-testhelpers = { path = "../facet-testhelpers" }
facet = { path = "../facet" }

[lints]
workspace = true
