[package]
name = "copypatch"
version = "0.2.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable copy-and-patch JIT substrate: executable memory (W^X), relocation patching, and build-time stencil extraction. Backend-agnostic — no IR, no schema."

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
# Only used by the build-time `extract` module (parsing the stencil object file).
object = { workspace = true, optional = true }

[target.'cfg(any(all(target_os = "macos", target_arch = "aarch64"), all(target_os = "linux", target_arch = "x86_64")))'.dependencies]
libc = "0.2"

[features]
# Enable the build-time stencil-extraction module (`copypatch::extract`). Turn
# this on when depending on copypatch as a `[build-dependencies]` entry; leave it
# off for the runtime substrate (`ExecBuf`, `patch_branch26`).
build = ["dep:object"]
