[package]
name = "dibs-cli"
version = "0.2.0-rc.2"
edition = "2024"
rust-version.workspace = true
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "CLI for dibs - Postgres toolkit for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "dibs"
path = "src/main.rs"

[build-dependencies]
dibs-config.workspace = true
dibs-query-schema.workspace = true
facet-styx.workspace = true

[dependencies]
styx-embed.workspace = true
styx-tree.workspace = true
styx-lsp-ext.workspace = true
dibs.workspace = true
dibs-config.workspace = true
dibs-proto.workspace = true
dibs-query-schema.workspace = true
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "process",
  "io-util",
  "io-std",
] }
facet.workspace = true
figue.workspace = true
facet-json.workspace = true
facet-styx.workspace = true
vox.workspace = true
vox-stream.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
jiff.workspace = true
owo-colors.workspace = true
ratatui.workspace = true
crossterm.workspace = true
arborium.workspace = true
arborium-highlight.workspace = true
arborium-theme.workspace = true
ariadne.workspace = true
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }

[dev-dependencies]
styx-lsp = { path = "../styx-lsp" }
serde_json = "1"
lsp-types = "0.97"
