[package]
name = "dibs-config"
version = "0.2.0-rc.4"
edition = "2024"
rust-version.workspace = true
description = "Facet types for the dibs configuration schema"
license = "MIT OR Apache-2.0"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
